src/test/deca/syntax/invalid/homemade/invalid_print.deca
// Description :
//      Test various prints
//
// Results :
//      missing ')' at ';'
//
// History :
//      created on 9/01/2020
{
    println("ok";
}
